[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game/UI/Buttons/BetterButton.gd" type="Script" id=1]

[node name="BetterButton" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
shortcut_in_tooltip = false
clip_text = true
script = ExtResource( 1 )

[node name="KeyLabel" type="Label" parent="."]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.317647 )
anchor_bottom = 1.0
margin_left = 4.0
margin_right = 8.0
text = "1"
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="ButtonLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
autowrap = true
clip_text = true

[connection signal="mouse_entered" from="." to="." method="_on_BetterButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_BetterButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_BetterButton_pressed"]
